# open-bpm

./: .gitignore  BENCHMARK.md  Cargo.toml  LICENSE  OpenBPM.md  PROGRESS.md  README.md  STATE.md
bench/: ballroom_features.tsv  ballroom_phrase.tsv  ballroom_synth.tsv  baseline_results.tsv  combined_features.tsv  compare_librosa.py  compare_librosa_giantsteps.py  giantsteps_features.tsv  giantsteps_phrase.tsv  giantsteps_synth.tsv  gtzan_features.tsv  gtzan_phrase.tsv  mixi_bpm_cli.rs  run_ballroom_benchmark.sh  run_benchmark.sh  run_gtzan_benchmark.sh  run_personal_benchmark.sh  validation.tsv  validation_round3.tsv
benches/: benchmark.rs
scripts/: analyze_phrase.py  analyze_synthetic.py  export_weights.py  extract_synthetic_features.py  merge_features.py  probe_phrase_repeat.py  train_judge_router.py  train_judge_router_v2.py
src/: beat.rs  bouncer.rs  judge_router.rs  judge_weights.rs  lib.rs  main.rs  metalearner.rs  onset.rs  phrase.rs  spectral.rs  tempo.rs
tests/: bastardo.rs  draconian.rs  librosa_occam.rs  synthetic_edm.rs
