[package]
name = "open-bpm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-accuracy BPM detection using triple-estimator fusion (IOI histogram + comb filter + autocorrelation)"
repository = "https://github.com/ASmallDuck/open-bpm"
keywords = ["bpm", "tempo", "beat", "music", "audio"]
categories = ["multimedia::audio"]

[lib]
name = "open_bpm"
path = "src/lib.rs"

[[bin]]
name = "open-bpm"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "validate_metrics"
path = "src/bin/validate_metrics.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:symphonia", "dep:clap"]

[dependencies]
rustfft = "6"
symphonia = { version = "0.5", features = ["mp3", "aac", "ogg", "flac", "wav", "pcm"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
